# RESA

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml
.streamlit/: config.toml
advanced_contour_design/: channel_helical_0.stl  nozzle_3d_generator.py  nozzle_3d_helical.json  nozzle_3d_straight.json  nozzle_3d_viewer.jsx  nozzle_inner.stl  nozzle_outer.stl  rao_nozzle_data.json  top_nozzle_generator.py
api/: __init__.py  main.py
data_lib/: example_sensor_analysis.py  gcs_data_tools.py  parquet_converter.py  performance_functions.py  sensor_data_tools.py  transients.py
demo_data/: IGN_T001_SAMPLE_DATA.csv
docs/: ARCHITECTURE_REFACTOR_PROPOSAL.md  FRONTEND_MIGRATION_ANALYSIS.md
engine_lib/: ChamberContour.py  cea_tools.py  cea_tools_test.py  compr_flow.py  cooling_1D.py  cooling_1D_V2.py  swirl_inj_sizing.py  tc_contour.py
examples/: 2KN_Ethanox_example.py  new_architecture_demo.py
fluid_lib/: N2Orifice-lib.py  TwoPhaseOrifice.py  comparison_v2_orifice.py  gas_orifice.py  incompressible_orifice.py
igniter_testing/: Batch_Process_IGN_CF_C1.py
injector_testing/: OPT_INJ_Calcs.py  cpk.py
reporting/: report_generator.py  test_template.md
resa/: __init__.py
rocket_engine/: Demo_45KN_Simulation.py  Demo_50N_Simulation.py  Hopper_E02_1A_Simulation.py  __init__.py  app.py
swirl_injector/: __init__.py  app.py  calculators.py  config.py  default_config.yaml  example.py  full_example.py  results.json  results.py  thermodynamics.py  visualization.py
tank_press_simulation/: tank_depletion_sim.py
(+343 files in other folders)
