[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resa"
version = "2.0.0"
description = "Rocket Engine Sizing & Analysis - Professional engine design tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RESA Team"}
]
keywords = ["rocket", "engine", "propulsion", "aerospace", "design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "plotly>=5.0",
    "streamlit>=1.20",
    "pyyaml>=6.0",
    "CoolProp>=6.4",
    "pandas>=1.3",
    "numpy-stl>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
resa = "resa.ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resa*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
